versioned_docs/version-0.10/samples/java.mdx
---
title: Getting Started on Okteto Cloud with Java
description: This tutorial will show you how to develop a Java sample application
sidebar_label: Java
id: java
---

import Image from '@theme/Image';

[Okteto Cloud](https://cloud.okteto.com/#/?origin=docs) gives instant access to secure Kubernetes namespaces to enable developers to code, build, and run Kubernetes applications entirely in the cloud.

This tutorial will show you how to develop and debug a Java sample application running in Okteto Cloud.

## Prerequisites

- Install the Okteto CLI >= 1.9.0. Follow this [guide](/docs/0.10/cloud/okteto-cli/) if you haven't done it yet.
- Configure access to your Okteto Cloud Namespace [using the Okteto CLI](/docs/0.10/cloud/credentials/#download-your-kubernetes-credentials-using-the-okteto-cli) or [using the Okteto Cloud UI](/docs/0.10/cloud/credentials/#download-your-kubernetes-credentials-from-the-okteto-cloud-ui).

## Step 1: Deploy the Java Sample App

Get a local version of the Java Sample App by executing the following commands:

#### Maven

```console
$ git clone https://github.com/okteto/java-maven-getting-started
$ cd java-maven-getting-started
```

#### Gradle

```console
$ git clone https://github.com/okteto/java-gradle-getting-started
$ cd java-gradle-getting-started
```

The `k8s.yml` file contains the [Kubernetes manifests](https://kubernetes.io/docs/concepts/workloads/controllers/deployment/) of the Java Sample App.
Deploy a dev version of the application by executing:

```console
$ kubectl apply -f k8s.yml
```

```console
deployment.apps "hello-world" created
service "hello-world" created
```

Log into [Okteto Cloud](https://cloud.okteto.com/#/?origin=docs) and click on the URL of the application:

<Image center src="/docs/samples/images/okteto-ui.png" alt="Okteto Cloud UI Java" width="850" />

Did you notice that you're accessing your application through an HTTPs endpoint? This is because Okteto Cloud will [automatically create them](/docs/0.10/cloud/ssl/) for you when you deploy your application. Cool no 😎?

## Step 2: Create your okteto manifest

To start developing on the Java Sample App you first need to create an okteto manifest.
With the Java Sample App deployed, run the following command to create your [okteto manifest](/docs/0.10/reference/manifest/):

```console
$ okteto init
```

```console
This command walks you through creating an okteto manifest.
It only covers the most common items, and tries to guess sensible defaults.
See https://okteto.com/docs/reference/manifest for the official documentation about the okteto manifest.
Use the arrow keys to navigate: ↓ ↑ → ←
Select the deployment you want to develop:
  ▸ hello-world
    Use default values
```

The `okteto init` command will scan the available deployments in your Kubernetes namespace and ask you to pick one.
Select the `hello-world` deployment. It's the one we deployed on the previous step.

```console
 ✓  hello-world
 ✓  Deployment 'hello-world' successfully analyzed
 ✓  okteto manifest (okteto.yml) created
 i  Run 'okteto up' to activate your development container
```

The `okteto init` command creates the following `okteto.yml` file:

#### Maven

```yaml
name: hello-world
image: okteto/maven:3
command: bash
volumes:
  - /root/.m2
sync:
  - .:/usr/src/app
forward:
  - 8080:8080
  - 5005:5005
```

#### Gradle

```yaml
name: hello-world
image: okteto/gradle:6.5
command: bash
volumes:
  - /home/gradle/.gradle
sync:
  - .:/usr/src/app
forward:
  - 8080:8080
  - 5005:5005
```

This file defines how to activate a development container for the Java Sample App:

- `name`: the name of the Kubernetes deployment you want to put on development mode
- `image`: the image used by the development container. More information on development images [here](/docs/0.10/reference/development-environment/)
- `command`: the start command of the development container
- `volumes`: a list of paths in your development container to be mounted as persistent volumes. This is useful to persist the maven/gradle caches.
- `sync`: the folders that will be synchronized between your local machine and the development container
- `forward`: a list of ports to forward from your development container

Also, the `okteto init` command creates a `.stignore` file to indicate which files shouldn't be synchronized to your development container.
This is useful to avoid synchronizing binaries, build artifacts, or git metadata.

## Step 3: Activate your development container

With the Java Sample Application deployed, run the following command:

```console
$ okteto up
```

```console
 ✓  Persistent volume successfully attached
 ✓  Images successfully pulled
 ✓  Files synchronized
    Namespace: cindy
    Name:      hello-world
    Forward:   8080 -> 8080
               5005 -> 5005

Welcome to your development container. Happy coding!
cindy:hello-world app>
```

Working in your development container is the same as working on your local machine.
Start the application by running the following command:

#### Maven

```console
default:hello-world app> mvn spring-boot:run
```

#### Gradle

```console
default:hello-world app> gradle bootRun
```

The first time you run the application, Maven/Gradle will compile your application. Wait for this process to finish.

Go back to the browser and reload the page to test that your application is running.

## Step 4: Develop directly on Okteto Cloud

Open `src/main/java/com/okteto/helloworld/RestHelloWorld.java` in your favorite local IDE and modify the response message on line 11 to be *Hello world from Okteto!*. Save your changes.

```java
package com.okteto.helloworld;

import org.springframework.web.bind.annotation.GetMapping;
import org.springframework.web.bind.annotation.RestController;

@RestController
public class RestHelloWorld {

	@GetMapping("/")
	public String sayHello() {
		return "Hello world from Okteto!";
	}
}
```

Your IDE will auto compile only the necessary `*.class` files which will be synchronized by Okteto to your application in Okteto Cloud. Take a look at the development container shell and notice how the changes are detected by Spring Boot and automatically hot reloaded.

> Import the `spring-boot-devtools` dependency to automatically restart your Java application whenever a file is changed.

Go back to the browser and reload the page. Your code changes were instantly applied. No commit, build, or push required 😎!

## Step 5: Debug directly on Okteto Cloud

Okteto enables you to debug your applications directly from your favorite IDE. Let's take a look at how that works in Eclipse, one of the most popular IDEs for Java development.

> Add the following JVM arguments in the Gradle/Maven configuration files to enable remote debugging in your Java application:
>
> `-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005`

Open the _Debug configuration_  dialog, add a new Remote Java Application debug configuration, and point it to `localhost:5005`:

<Image center src="/docs/samples/images/java-debug.png" alt="debugging in Okteto with Java" width="850" />

Click the Debug button to start a debugging session. Add a breakpoint on `src/main/java/es/okteto/helloworld/RestHelloWorld.java`, line 11. Go back to the browser and reload the page. The execution will halt at your breakpoint. You can then inspect the request, the available variables, etc...

<Image center src="/docs/samples/images/java-halt.png" alt="breakpoint in Java" width="850" />

Your code is executing in Okteto Cloud, but you can debug it from your local machine without any extra services or tools. Pretty cool no? 😉

## Next steps

Congratulations, you just developed **your first application in Okteto Cloud** 🚀.

> Okteto lets you develop your applications directly on Kubernetes. This way you can:
> - Eliminate integration issues by developing in a realistic environment
> - Test your application end to end as fast as you type code
> - No more CPU cycles wasted in your machine. Develop at the speed of the cloud!

Ready to develop your application on Okteto Cloud? Read our [step by step tutorial](/docs/0.10/tutorials/getting-started-with-pipelines/) on how to configure an Okteto Pipeline to deploy realistic environments for your application in just one click.

Find more advanced samples with Okteto in [this repository](https://github.com/okteto/samples) or join our [#okteto](https://kubernetes.slack.com/messages/CM1QMQGS0/) channel in the [Kubernetes community Slack](http://slack.k8s.io/) to ask questions or share your feedback.
